# fastapi-firebase

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/temp/: README.md  rename_project.sh
.github/workflows/: build.yaml  lint-test.yaml  rename.yaml  test.yaml
app/: __init__.py  __main__.py  initialiser.py
app/api/: deps.py
app/api/v1/: __init__.py  products.py
app/core/: config.py
app/crud/: base.py  product.py
app/db/: __init__.py  initialise.py  session.py
app/firebase/: session.py
app/schemas/: __init__.py  message.py  product.py
app/tests/api/v1/: _products_test.py  products_test.py
app/utils/: decorators.py
backend/: Dockerfile
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: products.py
backend/app/db/: base.py  docker-compose.yaml
backend/app/models/: product.py
backend/app/schemas/: product.py
migrations/: env.py
migrations/versions/: 41b91c0297ee_initial_commit.py
tests/: conftest.py
tests/api/v1/: test_products.py
tests/app/api/v1/: test_products.py
tests/app/utils/: test_decorators.py
tests/db/: test_initialise.py
tests/plugins/: env_vars.py
