[tool.poetry]
name = "rmenai-blueprints/fastapi"
version = "0.1.0"
description = "My FastAPI template"
authors = ["rmenai <rami.menai@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.15.0"
requests = "^2.26.0"
SQLAlchemy = "^1.4.31"
SQLAlchemy-Utils = "^0.38.2"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.6"
pydantic = "^1.9.0"
taskipy = "^1.10.2"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.2"
pytest = "^7.0.1"
coverage = "^6.3.2"
colorlog = "^6.5.0"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
flake8-annotations = "^2.6.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.6.0"
flake8-todo = "^0.7"
pep8-naming = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
setup = "alembic upgrade head && python -m app.initialiser"
start = "python -m app"
migrate = "alembic revision --autogenerate"
test = "coverage run -m pytest tests/"
report = "coverage report"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
