[tool.poetry]
name = "boilercodes/fastapi-firebase"
version = "0.1.0"
description = "My FastAPI template"
authors = ["rmenai <rami.menai@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.15.0"
firebase-admin = "^5.2.0"
requests = "^2.26.0"
pydantic = "^1.9.1"
taskipy = "^1.10.2"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.2"
pytest = "^7.1.2"
mock-firestore = "^0.11.0"
coverage = "^6.4.1"
colorlog = "^6.6.0"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
flake8-annotations = "^2.6.2"
flake8-bugbear = "^22.4.25"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.6.0"
flake8-todo = "^0.7"
pep8-naming = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "python -m app"
test = "coverage run -m pytest tests/"
report = "coverage report"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
